--- a/action.yml
+++ b/action.yml
@@ -160,7 +160,7 @@ runs:
           echo "Extract Jira tickets succeed"
           cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_TEMP_COMMITS_FILE }}" | grep -Eo "${{ inputs.pattern_jira_tickets }}" | sort -u | sort -n > "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
         else
-          echo "" > "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
+          touch "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
           echo "Extract Jira tickets failed"
         fi
         echo "cat: ${{ env.SRG_OUTPUT_TICKETS_FILE }}"
