--- a/action.yml
+++ b/action.yml
@@ -174,19 +174,25 @@ runs:
         if [ -s "./${{ env.SRG_OUTPUT_TICKETS_FILE }}" ]; then
           echo "Jira ticket list is not empty."
         else
-          echo "---------------------------------------------------------------------------------------------"
-          echo "Please make sure your pull request contains at least one Jira ticket id in any those places:"
-          echo "commit message"
-          echo "pull request title, or pull reuqest body"
-          echo "branch name."
-          echo "---------------------------------------------------------------------------------------------"
-          echo ""
-          echo "---------------------------------------------------------------------------------------------"
-          echo "请确保当前 pull request 关联（至少）一个 Jira ticket id"， 以下任何地方都可以：
-          echo "提交信息 （commit message）"
-          echo "pull request 标题栏, 或者 pull reuqest 内题栏"
-          echo "分支名称，（branch name）"
-          echo "---------------------------------------------------------------------------------------------"
+
+
+          
+          SUMMARY_NO_TICKET_ERROR=""
+          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}---------------------------------------------------------------------------------------------\n"
+          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}Please make sure your pull request contains at least one Jira ticket id in any those places:\n"
+          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}commit message\n"
+          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}pull request title, or pull reuqest body\n"
+          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}branch name.\n"
+          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}---------------------------------------------------------------------------------------------\n"
+          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}\n"
+          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}---------------------------------------------------------------------------------------------\n"
+          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}请确保当前 pull request 关联（至少）一个 Jira ticket id"， 以下任何地方都可以\n：
+          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}提交信息 （commit message）\n"
+          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}pull request 标题栏, 或者 pull reuqest 内题栏\n"
+          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}分支名称，（branch name）\n"
+          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}---------------------------------------------------------------------------------------------\n"
+          echo "$SUMMARY_NO_TICKET_ERROR" >> " >> $GITHUB_STEP_SUMMARY
+
           exit 1
         fi
         cat "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
