--- a/action.yml
+++ b/action.yml
@@ -191,7 +191,7 @@ runs:
           SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}pull request 标题栏, 或者 pull reuqest 内题栏\n"
           SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}分支名称，（branch name）\n"
           SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}---------------------------------------------------------------------------------------------\n"
-          echo "$SUMMARY_NO_TICKET_ERROR" >> " >> $GITHUB_STEP_SUMMARY
+          echo "$SUMMARY_NO_TICKET_ERROR" >> $GITHUB_STEP_SUMMARY
 
           exit 1
         fi
