--- a/action.yml
+++ b/action.yml
@@ -183,7 +183,7 @@ runs:
           SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}---------------------------------------------------------------------------------------------\n"
           SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}\n"
           SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}---------------------------------------------------------------------------------------------\n"
-          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}请确保当前 pull request 关联（至少）一个 Jira ticket id"， 以下任何地方都可以\n：
+          SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}请确保当前 pull request 关联（至少）一个 Jira ticket id， 以下任何地方都可以:\n"
           SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}提交信息 （commit message）\n"
           SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}pull request 标题栏, 或者 pull reuqest 内题栏\n"
           SUMMARY_NO_TICKET_ERROR="${SUMMARY_NO_TICKET_ERROR}分支名称，（branch name）\n"
