--- a/action.yml
+++ b/action.yml
@@ -168,11 +168,12 @@ runs:
       shell: bash
       if: ${{ github.event_name == 'pull_request' }}
       
-    - name: 'TTT -> Check Jira policy'
+    - name: 'TTT -> Enforce Jira policy'
       run: |
-        echo "TTT -> Check Jira policy."
+        echo "TTT -> Enforce Jira policy."
         if [ -s "./${{ env.SRG_OUTPUT_TICKETS_FILE }}" ]; then
           echo "Jira ticket list is not empty."
+          cat "./${{ env.SRG_OUTPUT_TICKETS_FILE }}"
         else
 
           echo "## Please make sure your pull request contains at least one Jira ticket id in any those places:" >>$GITHUB_STEP_SUMMARY
@@ -184,7 +185,7 @@ runs:
           echo "- pull request 标题栏, 或者 pull reuqest 内题栏" >>$GITHUB_STEP_SUMMARY
           echo "- 分支名称，（branch name）" >>$GITHUB_STEP_SUMMARY
 
-          echo "::error::## Please make sure your pull request contains at least one Jira ticket id"
+          echo "::error::Please make sure your pull request contains at least one Jira ticket id"
           echo "::error::请确保当前 pull request 关联（至少）一个 Jira ticket id"
           exit 1
         fi
