--- a/action.yml
+++ b/action.yml
@@ -175,7 +175,6 @@ runs:
           echo "Jira ticket list is not empty."
           cat "./${{ env.SRG_OUTPUT_TICKETS_FILE }}"
         else
-
           echo "## Please make sure your pull request contains at least one Jira ticket id in any those places:" >>$GITHUB_STEP_SUMMARY
           echo "- commit message" >>$GITHUB_STEP_SUMMARY
           echo "- pull request title, or pull reuqest body" >>$GITHUB_STEP_SUMMARY
@@ -184,20 +183,45 @@ runs:
           echo "- 提交信息 （commit message）" >>$GITHUB_STEP_SUMMARY
           echo "- pull request 标题栏, 或者 pull reuqest 内题栏" >>$GITHUB_STEP_SUMMARY
           echo "- 分支名称，（branch name）" >>$GITHUB_STEP_SUMMARY
-
-          echo "::error::Please make sure your pull request contains at least one Jira ticket id"
-          echo "::error::请确保当前 pull request 关联（至少）一个 Jira ticket id"
+          echo "::error::Please make sure your pull request or commit messages contains at least one Jira ticket id"
+          echo "::error::请确保当前 pull request 或者 commit message 关联（至少）一个 Jira ticket id"
           exit 1
         fi
         cat "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
       shell: bash
       if: ${{ inputs.enforce_jira_policy == 'true' }}
+      
+    - name: 'TTT -> Reminder Jira policy'
+      run: |
+        echo "TTT -> Enforce Jira policy."
+        if [ -s "./${{ env.SRG_OUTPUT_TICKETS_FILE }}" ]; then
+          echo "Jira ticket list is not empty."
+          cat "./${{ env.SRG_OUTPUT_TICKETS_FILE }}"
+        else
+          echo "## Please make sure your pull request contains at least one Jira ticket id in any those places:" >>$GITHUB_STEP_SUMMARY
+          echo "- commit message" >>$GITHUB_STEP_SUMMARY
+          echo "- pull request title, or pull reuqest body" >>$GITHUB_STEP_SUMMARY
+          echo "- branch name." >>$GITHUB_STEP_SUMMARY
+          echo "## 请确保当前 pull request 关联（至少）一个 Jira ticket id， 以下任何地方都可以:" >>$GITHUB_STEP_SUMMARY
+          echo "- 提交信息 （commit message）" >>$GITHUB_STEP_SUMMARY
+          echo "- pull request 标题栏, 或者 pull reuqest 内题栏" >>$GITHUB_STEP_SUMMARY
+          echo "- 分支名称，（branch name）" >>$GITHUB_STEP_SUMMARY
+          echo "::notice::Please make sure your pull request or commit messages contains at least one Jira ticket id"
+          echo "::notice::请确保当前 pull request 或者 commit message 关联（至少）一个 Jira ticket id"
+        fi
+        cat "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
+      shell: bash
+      if: ${{ inputs.enforce_jira_policy != 'true' }}
 
     - run: |
         echo "WWW -> Extract commit messages"
-        cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_TEMP_COMMITS_FILE }}" | grep -i -E "(${{ inputs.pattern_commit_convention }}):" | sed -e 's/([^()]*)//g' | sed 's/;/,/g'| sort -u | sort -n > "${{ env.SRG_OUTPUT_COMMITS_FILE }}" 
-        echo "cat: ${{ env.SRG_OUTPUT_COMMITS_FILE }}"
-        cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
+        if cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_TEMP_COMMITS_FILE }}" | grep -i -E "(${{ inputs.pattern_commit_convention }}):" >/dev/null 2>&1; then
+          echo "Extract commit messages succeed"
+          cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_TEMP_COMMITS_FILE }}" | grep -i -E "(${{ inputs.pattern_commit_convention }}):" | sed -e 's/([^()]*)//g' | sed 's/;/,/g'| sort -u | sort -n > "${{ env.SRG_OUTPUT_COMMITS_FILE }}" 
+        else
+          echo "Extract commit messages failed"
+          touche "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
+        fi
       shell: bash
       if: ${{ github.event_name == 'pull_request' }}
       
