--- a/action.yml
+++ b/action.yml
@@ -220,7 +220,7 @@ runs:
           cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_TEMP_COMMITS_FILE }}" | grep -i -E "(${{ inputs.pattern_commit_convention }}):" | sed -e 's/([^()]*)//g' | sed 's/;/,/g'| sort -u | sort -n > "${{ env.SRG_OUTPUT_COMMITS_FILE }}" 
         else
           echo "Extract commit messages failed"
-          touche "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
+          touch "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
         fi
       shell: bash
       if: ${{ github.event_name == 'pull_request' }}
