--- a/action.yml
+++ b/action.yml
@@ -238,9 +238,26 @@ runs:
         else
           echo "## ❌ Please make sure your pull request follows up the Wyze commit convention" >> $GITHUB_STEP_SUMMARY
           echo "## ❌ 请遵守 Wyze git commit messge 规范" >> $GITHUB_STEP_SUMMARY
-          echo "::error::❌ Please make sure your pull request follows up the Wyze commit convention"
-          echo "::error::❌ 请遵守 Wyze git commit messge 规范"
+          echo "::warning::❌ Please make sure your pull request follows up the Wyze commit convention"
+          echo "::warning::❌ 请遵守 Wyze git commit messge 规范"
           exit 1
+        fi
+        cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
+      shell: bash
+      if: ${{ inputs.enforce_commit_policy != 'true' }}
+
+    - name: 'TTT -> Reminder Wyze commit policy'
+      run: |
+        echo "TTT -> Reminder Wyze commit policy"
+        if [ -s "./${{ env.SRG_OUTPUT_COMMITS_FILE }}" ]; then
+          echo "commits message list is not empty."
+          cat "./${{ env.SRG_OUTPUT_COMMITS_FILE }}"
+        else
+          echo "## ⚠️ Please make sure your pull request follows up the Wyze commit convention" >> $GITHUB_STEP_SUMMARY
+          echo "## ⚠️ 请遵守 Wyze git commit messge 规范" >> $GITHUB_STEP_SUMMARY
+          echo "::error::⚠️ Please make sure your pull request follows up the Wyze commit convention"
+          echo "::error::⚠️ 请遵守 Wyze git commit messge 规范"
+
         fi
         cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
       shell: bash
