--- a/action.yml
+++ b/action.yml
@@ -240,10 +240,11 @@ runs:
           echo "## ❌ 请遵守 Wyze git commit messge 规范" >> $GITHUB_STEP_SUMMARY
           echo "::warning::❌ Please make sure your pull request follows up the Wyze commit convention"
           echo "::warning::❌ 请遵守 Wyze git commit messge 规范"
+          exit 1
         fi
         cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
       shell: bash
-      if: ${{ inputs.enforce_commit_policy != 'true' }}
+      if: ${{ inputs.enforce_commit_policy == 'true' }}
 
     - name: 'TTT -> Reminder Wyze commit policy'
       run: |
@@ -260,7 +261,7 @@ runs:
         fi
         cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
       shell: bash
-      if: ${{ inputs.enforce_commit_policy == 'true' }}
+      if: ${{ inputs.enforce_commit_policy != 'true' }}
 
     - run: |
         echo "XXX -> Print --> 0: cat files"
