--- a/action.yml
+++ b/action.yml
@@ -217,34 +217,35 @@ runs:
       shell: bash
       if: ${{ github.event_name == 'pull_request' }}
       
-    - name: 'TTT -> Enforce Wyze commit policy'
+    - name: 'TTT -> Enforce commit policy'
       run: |
-        echo "TTT -> Enforce Wyze commit policy"
+        echo "TTT -> Enforce commit policy"
         if [ -s "./${{ env.SRG_OUTPUT_COMMITS_FILE }}" ]; then
           echo "commits message list is not empty."
           cat "./${{ env.SRG_OUTPUT_COMMITS_FILE }}"
         else
-          echo "## ❌ Please make sure your pull request follows up the Wyze commit convention" >> $GITHUB_STEP_SUMMARY
-          echo "## ❌ 请遵守 Wyze git commit messge 规范" >> $GITHUB_STEP_SUMMARY
-          echo "::warning::❌ Please make sure your pull request follows up the Wyze commit convention"
-          echo "::warning::❌ 请遵守 Wyze git commit messge 规范"
+          echo "## ❌ Please make sure your pull request follows up the commit convention" >> $GITHUB_STEP_SUMMARY
+          echo "## ❌ 请遵守 git commit messge 规范" >> $GITHUB_STEP_SUMMARY
+          echo "[readme](/README.md)" >> $GITHUB_STEP_SUMMARY
+          echo "::warning::❌ Please make sure your pull request follows up the commit convention"
+          echo "::warning::❌ 请遵守 git commit messge 规范"
           exit 1
         fi
         cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
       shell: bash
       if: ${{ inputs.enforce_commit_policy == 'true' }}
 
-    - name: 'TTT -> Reminder Wyze commit policy'
+    - name: 'TTT -> Reminder commit policy'
       run: |
-        echo "TTT -> Reminder Wyze commit policy"
+        echo "TTT -> Reminder commit policy"
         if [ -s "./${{ env.SRG_OUTPUT_COMMITS_FILE }}" ]; then
           echo "commits message list is not empty."
           cat "./${{ env.SRG_OUTPUT_COMMITS_FILE }}"
         else
-          echo "## ⚠️ Please make sure your pull request follows up the Wyze commit convention" >> $GITHUB_STEP_SUMMARY
-          echo "## ⚠️ 请遵守 Wyze git commit messge 规范" >> $GITHUB_STEP_SUMMARY
-          echo "::error::⚠️ Please make sure your pull request follows up the Wyze commit convention"
-          echo "::error::⚠️ 请遵守 Wyze git commit messge 规范"
+          echo "## ⚠️ Please make sure your pull request follows up the commit convention" >> $GITHUB_STEP_SUMMARY
+          echo "## ⚠️ 请遵守 git commit messge 规范" >> $GITHUB_STEP_SUMMARY
+          echo "::error::⚠️ Please make sure your pull request follows up the commit convention"
+          echo "::error::⚠️ 请遵守 git commit messge 规范"
         fi
         cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
       shell: bash
