--- a/action.yml
+++ b/action.yml
@@ -244,6 +244,7 @@ runs:
         else
           echo "## ⚠️ Please make sure your pull request follows up the commit convention" >> $GITHUB_STEP_SUMMARY
           echo "## ⚠️ 请遵守 git commit messge 规范" >> $GITHUB_STEP_SUMMARY
+          echo "[readme](/README.md)" >> $GITHUB_STEP_SUMMARY
           echo "::error::⚠️ Please make sure your pull request follows up the commit convention"
           echo "::error::⚠️ 请遵守 git commit messge 规范"
         fi
