--- a/action.yml
+++ b/action.yml
@@ -226,7 +226,9 @@ runs:
         else
           echo "## ❌ Please make sure your pull request follows up the commit convention" >> $GITHUB_STEP_SUMMARY
           echo "## ❌ 请遵守 git commit messge 规范" >> $GITHUB_STEP_SUMMARY
-          echo "[readme](/README.md)" >> $GITHUB_STEP_SUMMARY
+
+          echo "[git commit convention](https://github.com/SweetRainGarden/SrgGactionChangelogApp/blob/develop/docs/git_commits_convention_en.md)" >> $GITHUB_STEP_SUMMARY
+          echo "[git commit messge 规范](https://github.com/SweetRainGarden/SrgGactionChangelogApp/blob/develop/docs/git_commits_convention_ch.md)" >> $GITHUB_STEP_SUMMARY
           echo "::warning::❌ Please make sure your pull request follows up the commit convention"
           echo "::warning::❌ 请遵守 git commit messge 规范"
           exit 1
@@ -244,7 +246,8 @@ runs:
         else
           echo "## ⚠️ Please make sure your pull request follows up the commit convention" >> $GITHUB_STEP_SUMMARY
           echo "## ⚠️ 请遵守 git commit messge 规范" >> $GITHUB_STEP_SUMMARY
-          echo "[readme](/README.md)" >> $GITHUB_STEP_SUMMARY
+          echo "[git commit convention](https://github.com/SweetRainGarden/SrgGactionChangelogApp/blob/develop/docs/git_commits_convention_en.md)" >> $GITHUB_STEP_SUMMARY
+          echo "[git commit messge 规范](https://github.com/SweetRainGarden/SrgGactionChangelogApp/blob/develop/docs/git_commits_convention_ch.md)" >> $GITHUB_STEP_SUMMARY
           echo "::error::⚠️ Please make sure your pull request follows up the commit convention"
           echo "::error::⚠️ 请遵守 git commit messge 规范"
         fi
