ci: chore:  add regex to match wma1-123 format. it was only match wma-123, test ticket id: test-32324

--- a/.github/workflows/collect_changelog_from_pr.yml
+++ b/.github/workflows/collect_changelog_from_pr.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - id: collect_jira_tickets_in_pr
         continue-on-error: true
-        uses: SweetRainGarden/SrgGactionChangelogApp@develop
+        uses: SweetRainGarden/SrgGactionChangelogApp@release/1.0.0
         with:
           jira_domain: 'xxx.atlassian.net'
 
