ci: chore: test1-234 test changelog on wyze macos runner, test ticket id: test-32324

--- a/.github/workflows/collect_changelog_from_pr.yml
+++ b/.github/workflows/collect_changelog_from_pr.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   generate_changelog:
-    runs-on: [ ubuntu-latest ]
+    runs-on: [ self-hosted, macOS ]
     name: "Generate changelog from PR"
     steps:
       - id: collect_jira_tickets_in_pr
