Revert "ci: chore: make google sheet json error, test ticket id: test-32324"
This reverts commit 2bd9681cac33d596dd64c108e2b528a0e8ac5894.

--- a/action.yml
+++ b/action.yml
@@ -320,7 +320,7 @@ runs:
                           "${{ github.head_ref }}",
                           "${{ github.event.pull_request.merged }}",
                           "${{ github.event.action }}",
-                          "${{ github.actor }}",.
+                          "${{ github.actor }}",
                           "${{ env.SRG_ACTION_TRIGGER_TIME_SEATTLE }}",
                           "${{ env.SRG_ACTION_TRIGGER_TIME_BEIJING }}",
                           "${{ env.SRG_ACTION_TICKET_LIST }}",
