ci: chore: echo jq command, test ticket id: test-32324

--- a/action.yml
+++ b/action.yml
@@ -107,15 +107,15 @@ runs:
         curl -s -H "Authorization: token ${{ inputs.gh_token }}" -H "Accept: application/vnd.github+json" $API_URL > "${{ env.SRG_TEMP_FILE}}"
         cat "./${{ env.SRG_TEMP_FILE}}"
 
-        jq_installed=$(command -v jq)
+        # jq_installed=$(command -v jq)
 
-        echo "jq_installed: $jq_installed"
-        if [ -z "$jq_installed" ]; then
-          echo "jq is not installed on the machine, exit..." 
-          exit 1
-        else
-          echo "jq has installed on the machine" 
-        fi
+        # echo "jq_installed: $jq_installed"
+        # if [ -z "$jq_installed" ]; then
+        #   echo "jq is not installed on the machine, exit..." 
+        #   exit 1
+        # else
+        #   echo "jq has installed on the machine" 
+        # fi
 
         echo "---------------------------------------------"
         cat "./${{ env.SRG_TEMP_FILE}}" | jq -r '.[] | "\(.commit.message)"' > "./${{ env.SRG_TEMP_COMMITS_FILE }}"
