--- a/action.yml
+++ b/action.yml
@@ -155,7 +155,7 @@ runs:
 
     - run: |
         echo "WWW -> Extract Jira tickets"
-        if cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_TEMP_COMMITS_FILE }}" | tr '[:upper:]' '[:lower:]' | grep -Eo "${{ inputs.pattern_jira_tickets }}" | grep -v -E '^(patch|feature|bugfix)-[0-9]+' >/dev/null 2>&1; then
+        if cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_TEMP_COMMITS_FILE }}" | tr '[:upper:]' '[:lower:]' | grep -Eo "${{ inputs.pattern_jira_tickets }}" | grep -v -E '^(patch|feature|bugfix)-[0-9]+' | sort -u | sort -n >/dev/null 2>&1; then
           echo "Extract Jira tickets succeed"
           cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_TEMP_COMMITS_FILE }}" | tr '[:upper:]' '[:lower:]' | grep -Eo "${{ inputs.pattern_jira_tickets }}" | grep -v -E '^(patch|feature|bugfix)-[0-9]+' | sort -u | sort -n > "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
         else
@@ -166,6 +166,7 @@ runs:
           # echo "" > "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
           echo "Extract Jira tickets failed"
         fi
+
         echo "cat: ${{ env.SRG_OUTPUT_TICKETS_FILE }}"
         cat "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
       shell: bash
