--- a/action.yml
+++ b/action.yml
@@ -155,9 +155,14 @@ runs:
 
     - run: |
         echo "WWW -> Extract Jira tickets"
-        if cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_TEMP_COMMITS_FILE }}" | tr '[:upper:]' '[:lower:]' | grep -Eo "${{ inputs.pattern_jira_tickets }}" | grep -v -E '^(patch|feature|bugfix)-[0-9]+' | sort -u | sort -n >/dev/null 2>&1; then
+        temp_merge="temp_merge.txt"
+
+        cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_TEMP_COMMITS_FILE }}" >> "${temp_merge}"
+        echo " ---> : ${temp_merge}"
+        cat "${temp_merge}"
+        if cat "${temp_merge}" | tr '[:upper:]' '[:lower:]' | grep -Eo "${{ inputs.pattern_jira_tickets }}" | grep -v -E '^(patch|feature|bugfix)-[0-9]+' | sort -u | sort -n >/dev/null 2>&1; then
           echo "Extract Jira tickets succeed"
-          cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_TEMP_COMMITS_FILE }}" | tr '[:upper:]' '[:lower:]' | grep -Eo "${{ inputs.pattern_jira_tickets }}" | grep -v -E '^(patch|feature|bugfix)-[0-9]+' | sort -u | sort -n > "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
+          cat "${temp_merge}" | tr '[:upper:]' '[:lower:]' | grep -Eo "${{ inputs.pattern_jira_tickets }}" | grep -v -E '^(patch|feature|bugfix)-[0-9]+' | sort -u | sort -n > "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
         else
           if [ -f "${{ env.SRG_OUTPUT_TICKETS_FILE }}" ]; then
             rm -f "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
