--- a/action.yml
+++ b/action.yml
@@ -23,6 +23,9 @@ inputs:
   pattern_jira_tickets:
     required: false
     default: "([a-z]+[0-9]*-[0-9]+)"
+  ignored_jira_tickets:
+    required: false
+    default: "^(patch|feature|bugfix)-[0-9]+"
     # default: "([a-z]{2,}-)([0-9]+)"
     description: 'Regex for extract jira ticket'
   google_sheet_token:
@@ -177,9 +180,9 @@ runs:
         cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_TEMP_COMMITS_FILE }}" > "${temp_merge}"
         echo " ---> : ${temp_merge}"
         cat "${temp_merge}"
-        if cat "${temp_merge}" | tr '[:upper:]' '[:lower:]' | grep -Eo "${{ inputs.pattern_jira_tickets }}" | grep -v -E '^(patch|feature|bugfix)-[0-9]+' | sort -u | sort -n >/dev/null 2>&1; then
+        if cat "${temp_merge}" | tr '[:upper:]' '[:lower:]' | grep -Eo "${{ inputs.pattern_jira_tickets }}" | grep -v -E "${{ inputs.ignored_jira_tickets }}" | sort -u | sort -n >/dev/null 2>&1; then
           echo "Extract Jira tickets succeed"
-          cat "${temp_merge}" | tr '[:upper:]' '[:lower:]' | grep -Eo "${{ inputs.pattern_jira_tickets }}" | grep -v -E '^(patch|feature|bugfix)-[0-9]+' | sort -u | sort -n > "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
+          cat "${temp_merge}" | tr '[:upper:]' '[:lower:]' | grep -Eo "${{ inputs.pattern_jira_tickets }}" | grep -v -E "${{ inputs.ignored_jira_tickets }}" | sort -u | sort -n > "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
         else
 
           # echo "" > "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
