--- a/action.yml
+++ b/action.yml
@@ -347,6 +347,7 @@ runs:
     - name: "TTT -> Update Google Sheet --> 1: append merged pr data"
       continue-on-error: true
       id: append_data_google_sheet
+      if: ${{ github.event_name != 'pull_request' || github.event.action != 'closed' || github.event.pull_request.merged != false }}
       uses: jroehl/gsheet.action@v2.1.0
       with:
         spreadsheetId: "${{inputs.google_sheet_id}}"
